[package]
name = "lumora"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
libc = "0.2"
llvm-sys = "181.2.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.11", features = ["derive"] }
dirs = "5.0.1"
indicatif = "0.17.8"